Closed Bug 1353179 Opened 8 years ago Closed 8 years ago

Fix the content process permission available assertion

Categories

(Core :: Permission Manager, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 + fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file, 1 obsolete file)

When no permission with the given name is available in the content process, this assertion was not firing correctly. This patch is for fixing this problem and also fixing any permission breakage which is discovered in the fallout.
We need the preload permission abstraction to get around the permissions used by nsContentBlocker, which need to be in the content process before the URL is loaded. This abstraction should provide a foundation in the future for any other permissions which act like that, if we discover that they exist. This hasn't been run through try yet, and I may add additional patches once it has to fix additional assertion failures which I encounter. MozReview-Commit-ID: DAVPue8krnH
Attachment #8854528 - Flags: review?(amarchesini)
I made a typo - fixed. MozReview-Commit-ID: DAVPue8krnH
Attachment #8854545 - Flags: review?(amarchesini)
Attachment #8854528 - Attachment is obsolete: true
Attachment #8854528 - Flags: review?(amarchesini)
Depends on: 1353844
Comment on attachment 8854545 [details] [diff] [review] Fix the content process permission assertion, and add support for pre-load permissions Review of attachment 8854545 [details] [diff] [review]: ----------------------------------------------------------------- ::: extensions/cookie/nsPermissionManager.cpp @@ +3015,5 @@ > if (permEntry.mPermission == nsIPermissionManager::UNKNOWN_ACTION) { > continue; > } > > + // XXX: This performs extra work, such as in many cases re-computing the are you planning to do a follow up for this? If yes, can you file a bug. and maybe write the bug id here?
Attachment #8854545 - Flags: review?(amarchesini) → review+
No longer blocks: 1352772
Depends on: 1352772, 1354635
[Tracking Requested - why for this release]: This lack of an assertion has caused a minor regression from bug 1337056. This bug shouldn't be too big of a deal on nightly but should be fixed before release.
Depends on: 1355608
See Also: → 1357107
Pushed by michael@thelayzells.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e9e4b447bf87 Fix the content process permission assertion, and add support for pre-load permissions, r=baku
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Depends on: 1362791
No longer depends on: 1362791
Depends on: 1374665
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: