Bug 1353179 - Fix the content process permission assertion, and add support for pre-load permissions, r=baku

MozReview-Commit-ID: DAVPue8krnH